<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="button_clicked">Clicked</string>
    <string name="button_default">Download</string>
    <string name="title_activity_detail">DetailActivity</string>

    <!--Default download options-->
    <string name="download_glide">Glide — Image Loading Library by BumpTech</string>
    <string name="download_load_app">LoadApp — Current repository by Udacity</string>
    <string name="download_retrofit">Retrofit — Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="download_custom">Provide your custom URL</string>

    <string name="no_option_chosen">You need to select an option</string>

    <!--Notifications-->
    <string name="download_notification_channel_id" translatable="false">download_app_channel</string>
    <string name="download_notification_channel_name" translatable="true">DownloadApp</string>
    <string name="download_notification_channel_desc" translatable="true">Channel for LoadApp</string>
    <string name="check_download_status">Check the status</string>
    <string name="ok_text">OK</string>
    <string name="file_name_label">File name:</string>
    <string name="status_label">Status:</string>
    <string name="description_label">Description:</string>
</resources>
