<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_download">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/rg_download_options"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rb_glide"
                    style="@style/DownloadRadioButton"
                    android:text="@string/download_glide" />

                <RadioButton
                    android:id="@+id/rb_load_app"
                    style="@style/DownloadRadioButton"
                    android:text="@string/download_load_app" />

                <RadioButton
                    android:id="@+id/rb_retrofit"
                    style="@style/DownloadRadioButton"
                    android:text="@string/download_retrofit" />

                <RadioButton
                    android:id="@+id/rb_custom"
                    style="@style/DownloadRadioButton"
                    android:text="@string/download_custom" />
            </RadioGroup>

            <EditText
                android:id="@+id/et_custom"
                android:hint="type your URL"
                android:lines="1"
                android:gravity="center"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri|text"
                android:importantForAutofill="no" />
        </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_download"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        android:src="@drawable/ic_cloud_download_24"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <com.udacity.ui.custom.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/layout_margin"
        android:background="@color/colorPrimary"
        app:btnLabel="Download"
        app:btnTextColor="@android:color/white"
        app:circleColor="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:loadingColor="@color/cloud_color"
        tools:text="Download" />

</androidx.constraintlayout.widget.ConstraintLayout>
